syntax = "proto3";

package org.tasks.v1;

option go_package = "github.com/BradErz/monorepo/gen/go/org/tasks/v1;tasksv1";

import "org/meta/v1/meta.proto";

message Task {
    string id = 1;
    string name = 2;
    map<string, string> labels = 3;
    org.meta.v1.Created created = 4;
}

message CreateTaskRequest {
    string name = 1;
    map<string, string> labels = 2;
}

message CreateTaskResponse {
    Task task = 1;
}

message ListTasksRequest {

}

message ListTasksResponse {
    repeated Task tasks = 1;
}

service TasksService {
    rpc CreateTask(CreateTaskRequest) returns(CreateTaskResponse);
    rpc ListTasks(ListTasksRequest) returns(ListTasksResponse);
}